Improving the wrapper to the Arduino USB serial.
- Add all files to the CMake file.
- Add the watchdog implementation.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ project(HAL-feather-m0)
 set(CMAKE_CXX_STANDARD 17)
 
 # Create a static library.
-file(GLOB SRC_FILES "*.cpp")
-add_library(HAL-feather-m0 ${SRC_FILES})
+add_library(HAL-feather-m0 Chip.hpp GPIO_SAMD21.cpp GPIO_SAMD21.hpp InterruptLock_Arduino.cpp
+        SerialLine_ArduinoUSB.cpp SerialLine_ArduinoUSB.hpp Timer_Arduino.cpp WireMaster_FeatherM0.hpp
+        WireMaster_SAMD21.cpp WireMaster_SAMD21.hpp Watchdog_SAMD21.cpp)
 
